# lattes

./: .gitignore  Professores - CI.xlsx  README.md  categorias_CurriculoLattes.md  pyproject.toml  relatorio.ipynb
data/: prof_labs.csv  professor_yuri_heap.json  professores.csv  professores.json  professores_ci.csv  publicacoes_unificadas.json  titulos_producoes.json  yuri_network_analysis.json
notebook/: analysis.ipynb  cluster_0_exemplos.txt  cluster_1_exemplos.txt  cluster_2_exemplos.txt  cluster_3_exemplos.txt  cluster_4_exemplos.txt  cluster_5_exemplos.txt  cluster_6_exemplos.txt  laboratorios.ipynb  notebook_relatorio.ipynb  proximidade.ipynb  publicacoes.ipynb  relatorio.ipynb  utils_lattes.py
professores_perfil_html/: Adriana Carla Damasceno.html  Alan Kelon Oliveira de Moraes.html  Alisson Vasconcelos de Brito.html  Alvaro Francisco de Castro Medeiros.html  Ana Paula Pintado Wyse.html  Anand Subramanian.html  Andrei de Araujo Formiga.html  Andréa Vanessa Rocha.html  Aparecido Jesuino de Souza.html  Augusto de Holanda Barreto Martins Tavares.html  Bruno Jefferson de Sousa Pessoa.html  Bruno Petrato Bruck.html  Camila Mara Vital Barros.html  Carlos Alberto Nunes Machado.html  Carlos Eduardo Coelho Freire Batista.html  Christian Azambuja Pagot.html  Clauirton de Albuquerque Siebra.html  Daniela Coelho Batista Guedes Pereira.html  Danielle Rousy Dias Ricarte.html  Davi Henrique dos Santos.html  Derzu Omaia.html  Ed Porto Bezerra.html  Elizabet Maria Spohr de Medeiros.html  Eudisley Gomes dos Anjos.html  Ewerton Monteiro Salvador.html  Fernando Menezes Matos.html  (+41 more)
(+6 files in other folders)
