[project]
name = "python-starter"
version = "0.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "kneed>=0.8.5",
    "lxml>=6.0.0",
    "nltk>=3.9.1",
    "pandas>=2.3.1",
    "playwright>=1.54.0",
]

[dependency-groups]
dev = [
    "jupyter",
    "pre-commit>=4.2.0",
    "ruff",
]
